Removed fixed height to avoid stretching

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,6 @@ body{
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
-  max-height: 370px;
 }
 
 .item h1{
